fixed some mobile issues now need to make readable

--- a/src/App.css
+++ b/src/App.css
@@ -172,3 +172,50 @@ body{
   border-radius: 5px;
   display: block;
 }
+
+@media only screen and (max-width: 600px){
+  .big-container{
+    box-sizing: border-box;
+    padding: 5px;
+  }
+
+  .big-container h1 {
+    margin-top: 55px;
+    font-size: 1em;
+    text-align: center;
+  }
+
+  .big-container p{
+    padding: 0 0 0 35px;
+    font-size: .6em;
+    margin: 15px auto;
+  }
+
+  .social-media {
+    margin: 45px auto;
+  }
+
+  .social-media a {
+    margin: 0 10px 0 10px;
+  }
+
+  .blog-container{
+    box-sizing: border-box;
+    flex-wrap: nowrap;
+    flex-direction: column;
+    height: auto !important;
+  }
+
+  .blog-container h1{
+    padding: 15px;
+    font-size: 1.5em;
+  }
+
+  .blog{
+    width: 90% !important;
+  }
+
+  .me img {
+    display: none;
+  }
+}
